--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+.users/mapei/OneDrive/Documents/PlatformIO/Projects/MAX7219/***REMOVED***.h
