--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 .vscode/ipch
 .gitignore
 .users/mapei/OneDrive/Documents/PlatformIO/Projects/MAX7219/***REMOVED***.h
+.\Users\mapei\OneDrive\Documents\PlatformIO\Projects\MAX7219\src\***REMOVED***.h
