AHT10 Temp/Humidity and MySql integration

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ build_flags =
 lib_deps =
     https://github.com/mozilla-iot/webthing-arduino.git
 monitor_speed = 115200
+comport = COM15
 
 [env:esp32dev]
 platform = espressif32
@@ -28,7 +29,27 @@ lib_deps =
     ${global.lib_deps}
     ESP Async WebServer
     ESP32 AnalogWrite
-lib_ignore = WiFi101
-lib_ldf_mode = deep+
-monitor_speed =  ${global.monitor_speed}
-upload_port=COM15
+    
+  # Accept new functionality in a backwards compatible manner and patches
+  adafruit/Adafruit AHTX0 @ ^2.0.0
+
+  # Acept only backwards compatible bug fixes
+  # (any version with the same major and minor versions, and an equal or greater patch version)
+  adafruit/Adafruit AHTX0 @ ~2.0.0
+
+  # The exact version
+  adafruit/Adafruit AHTX0 @ 2.0.0
+
+  # MySQL connector
+    chuckbell/MySQL Connector Arduino @ ^1.2.0
+  # Acept only backwards compatible bug fixes
+  # (any version with the same major and minor versions, and an equal or greater patch version)
+    chuckbell/MySQL Connector Arduino @ ~1.2.0
+  # The exact version
+    chuckbell/MySQL Connector Arduino @ 1.2.0
+    
+
+lib_ignore      = WiFi101
+lib_ldf_mode    = deep+
+monitor_speed   = ${global.monitor_speed}
+upload_port     = ${global.comport}
