--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,8 @@ monitor_speed = 115200
 comport = COM15
 
 [env:esp32dev]
+upload_protocol = espota
+upload_port     = 192.168.0.15
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -52,4 +54,4 @@ lib_deps =
 lib_ignore      = WiFi101
 lib_ldf_mode    = deep+
 monitor_speed   = ${global.monitor_speed}
-upload_port     = ${global.comport}
+##upload_port     = ${global.comport}
