removed unwanted Debug statements around Wifi callbacks

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,10 +22,14 @@ monitor_speed = 115200
 comport = COM15
 
 [env:esp32dev]
-upload_protocol = espota
-upload_port     = 192.168.0.15
+;upload_protocol = espota 
+upload_protocol = esptool
+;upload_port     = 192.168.0.15
+;upload_port =  192.168.0.15     
+upload_port = com15
 platform = espressif32
 board = esp32dev
+
 framework = arduino
 lib_deps =
     ${global.lib_deps}
@@ -54,4 +58,6 @@ lib_deps =
 lib_ignore      = WiFi101
 lib_ldf_mode    = deep+
 monitor_speed   = ${global.monitor_speed}
-##upload_port     = ${global.comport}
+build_flags =
+    -DCORE_DEBUG_LEVEL=5
+    -DDEBUG_ESP_OTA
