implemented MySQL Data push through Stored Procedure

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,58 +7,55 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[platformio]
-default_envs=esp32dev
-[common_env_data]
-build_flags =
-    -D VERSION=1.2.3
-    -D DEBUG=1
 
+[platformio]
+default_envs = esp32dev
+
+[common_env_data]
+build_flags = 
+	-D VERSION=1.2.3
+	-D DEBUG=1
 
 [global]
-lib_deps =
-   ;; https://github.com/apeiris/webthing-arduino.git
-  https://github.com/mozilla-iot/webthing-arduino.git
+lib_deps = 
+  https://github.com/apeiris/webthing-arduino.git
+  https://github.com/apeiris/MySQL_Connector_Arduino.git
 monitor_speed = 115200
 comport = COM15
 
 [env:esp32dev]
-;upload_protocol = espota 
 upload_protocol = esptool
-;upload_port     = 192.168.0.15
-;upload_port =  192.168.0.15     
 upload_port = com15
 platform = espressif32
 board = esp32dev
-
 framework = arduino
-lib_deps =
-    ${global.lib_deps}
-    ESP Async WebServer
-    ESP32 AnalogWrite
-    
+platform_packages =
+    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+lib_deps = 
+	${global.lib_deps}
+  # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
-  adafruit/Adafruit AHTX0 @ ^2.0.0
+  ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
 
   # Acept only backwards compatible bug fixes
   # (any version with the same major and minor versions, and an equal or greater patch version)
-  adafruit/Adafruit AHTX0 @ ~2.0.0
+  ottowinter/ESPAsyncWebServer-esphome @ ~1.2.7
 
   # The exact version
-  adafruit/Adafruit AHTX0 @ 2.0.0
+  ottowinter/ESPAsyncWebServer-esphome @ 1.2.7
+	ESP32 AnalogWrite
+	adafruit/Adafruit AHTX0 @ ^2.0.0
+	adafruit/Adafruit AHTX0 @ ~2.0.0
+	adafruit/Adafruit AHTX0 @ 2.0.0
+;;//	chuckbell/MySQL Connector Arduino @ ^1.2.0
+;//	chuckbell/MySQL Connector Arduino @ ~1.2.0
+;//	chuckbell/MySQL Connector Arduino @ 1.2.0
+	webthingsio/webthing-arduino@^0.11.7
+lib_ignore = WiFi101
+lib_ldf_mode = deep+
+monitor_speed = ${global.monitor_speed}
+build_flags = 
+	-D CORE_DEBUG_LEVEL=5
+	-D DEBUG_ESP_OTA
+	-D CONFIG_LOG_COLORS
 
-  # MySQL connector
-    chuckbell/MySQL Connector Arduino @ ^1.2.0
-  # Acept only backwards compatible bug fixes
-  # (any version with the same major and minor versions, and an equal or greater patch version)
-    chuckbell/MySQL Connector Arduino @ ~1.2.0
-  # The exact version
-    chuckbell/MySQL Connector Arduino @ 1.2.0
-    
-
-lib_ignore      = WiFi101
-lib_ldf_mode    = deep+
-monitor_speed   = ${global.monitor_speed}
-build_flags =
-    -DCORE_DEBUG_LEVEL=5
-    -DDEBUG_ESP_OTA
