--- a/platformio.ini
+++ b/platformio.ini
@@ -1,31 +1,21 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
+; MAX7219
 [platformio]
 default_envs = esp32dev
-
 [common_env_data]
 build_flags = 
 	-D VERSION=1.2.3
 	-D DEBUG=1
-
 [global]
 lib_deps = 
   https://github.com/apeiris/webthing-arduino.git
   https://github.com/apeiris/MySQL_Connector_Arduino.git
-monitor_speed = 115200
-comport = COM15
 
 [env:esp32dev]
 upload_protocol = esptool
-upload_port = com15
+upload_port = COM15
+monitor_speed  =   115200
+monitor_filters =  colorize,  time
+monitor_port =  COM15
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -36,11 +26,9 @@ lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
   ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
-
   # Acept only backwards compatible bug fixes
   # (any version with the same major and minor versions, and an equal or greater patch version)
   ottowinter/ESPAsyncWebServer-esphome @ ~1.2.7
-
   # The exact version
   ottowinter/ESPAsyncWebServer-esphome @ 1.2.7
 	ESP32 AnalogWrite
@@ -53,9 +41,11 @@ lib_deps =
 	webthingsio/webthing-arduino@^0.11.7
 lib_ignore = WiFi101
 lib_ldf_mode = deep+
-monitor_speed = ${global.monitor_speed}
+
 build_flags = 
 	-D CORE_DEBUG_LEVEL=5
 	-D DEBUG_ESP_OTA
-	-D CONFIG_LOG_COLORS
-
+ ; -D DEBUG_JSON
+  -D MQERR
+ ; -D DEBUG
+  -D debugmysql
