--- a/platformio.ini
+++ b/platformio.ini
@@ -39,6 +39,7 @@ lib_deps =
 ;//	chuckbell/MySQL Connector Arduino @ ~1.2.0
 ;//	chuckbell/MySQL Connector Arduino @ 1.2.0
 	webthingsio/webthing-arduino@^0.11.7
+  knolleary/PubSubClient @ 2.8
 lib_ignore = WiFi101
 lib_ldf_mode = deep+
 
