--- a/platformio.ini
+++ b/platformio.ini
@@ -1,52 +1,53 @@
-; MAX7219
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 default_envs = esp32dev
+
 [common_env_data]
 build_flags = 
 	-D VERSION=1.2.3
 	-D DEBUG=1
+
 [global]
 lib_deps = 
-  https://github.com/apeiris/webthing-arduino.git
-  https://github.com/apeiris/MySQL_Connector_Arduino.git
+	https://github.com/apeiris/webthing-arduino.git
+	https://github.com/apeiris/MySQL_Connector_Arduino.git
 
 [env:esp32dev]
 upload_protocol = esptool
 upload_port = COM15
-monitor_speed  =   115200
-monitor_filters =  colorize,  time
-monitor_port =  COM15
+monitor_speed = 115200
+monitor_filters = colorize
+monitor_port = COM15
 platform = espressif32
 board = esp32dev
 framework = arduino
-platform_packages =
-    framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
+platform_packages = 
+	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 lib_deps = 
 	${global.lib_deps}
-  # RECOMMENDED
-  # Accept new functionality in a backwards compatible manner and patches
-  ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
-  # Acept only backwards compatible bug fixes
-  # (any version with the same major and minor versions, and an equal or greater patch version)
-  ottowinter/ESPAsyncWebServer-esphome @ ~1.2.7
-  # The exact version
-  ottowinter/ESPAsyncWebServer-esphome @ 1.2.7
+	ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
+	ottowinter/ESPAsyncWebServer-esphome @ ~1.2.7
+	ottowinter/ESPAsyncWebServer-esphome @ 1.2.7
 	ESP32 AnalogWrite
 	adafruit/Adafruit AHTX0 @ ^2.0.0
 	adafruit/Adafruit AHTX0 @ ~2.0.0
 	adafruit/Adafruit AHTX0 @ 2.0.0
-;;//	chuckbell/MySQL Connector Arduino @ ^1.2.0
-;//	chuckbell/MySQL Connector Arduino @ ~1.2.0
-;//	chuckbell/MySQL Connector Arduino @ 1.2.0
 	webthingsio/webthing-arduino@^0.11.7
-  knolleary/PubSubClient @ 2.8
+	knolleary/PubSubClient @ 2.8
+	bblanchon/StreamUtils@^1.5.0
 lib_ignore = WiFi101
 lib_ldf_mode = deep+
-
 build_flags = 
-	-D CORE_DEBUG_LEVEL=5
-	-D DEBUG_ESP_OTA
- ; -D DEBUG_JSON
-  -D MQERR
- ; -D DEBUG
-  -D debugmysql
+	-D CORE_DEBUG_LEVEL=6
+	-D DEBUG_JSON
+	-D MQERR
+	-D debugmysql
