vscode/platformIo crash.. need to re-install

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,13 +19,11 @@ build_flags =
 [global]
 lib_deps = 
 	https://github.com/apeiris/webthing-arduino.git
-	https://github.com/apeiris/MySQL_Connector_Arduino.git
-
 [env:esp32dev]
 upload_protocol = esptool
 upload_port = COM15
 monitor_speed = 115200
-monitor_filters = colorize
+monitor_filters = time,colorize
 monitor_port = COM15
 platform = espressif32
 board = esp32dev
@@ -50,4 +48,4 @@ build_flags =
 	-D CORE_DEBUG_LEVEL=6
 	-D DEBUG_JSON
 	-D MQERR
-	-D debugmysql
+
