--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ lib_deps =
 upload_protocol = esptool
 upload_port = COM15
 monitor_speed = 115200
-monitor_filters = time,colorize
+monitor_filters = time
 monitor_port = COM15
 platform = espressif32
 board = esp32dev
@@ -32,6 +32,7 @@ platform_packages =
 	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 lib_deps = 
 	${global.lib_deps}
+	https://github.com/apeiris/webthing-arduino.git
 	ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
 	ottowinter/ESPAsyncWebServer-esphome @ ~1.2.7
 	ottowinter/ESPAsyncWebServer-esphome @ 1.2.7
@@ -39,9 +40,10 @@ lib_deps =
 	adafruit/Adafruit AHTX0 @ ^2.0.0
 	adafruit/Adafruit AHTX0 @ ~2.0.0
 	adafruit/Adafruit AHTX0 @ 2.0.0
-	webthingsio/webthing-arduino@^0.11.7
+;	webthingsio/webthing-arduino@^0.11.7
 	knolleary/PubSubClient @ 2.8
 	bblanchon/StreamUtils@^1.5.0
+  
 lib_ignore = WiFi101
 lib_ldf_mode = deep+
 build_flags = 
