--- a/platformio.ini
+++ b/platformio.ini
@@ -12,16 +12,21 @@
 default_envs = esp32dev
 
 [common_env_data]
-build_flags = 
-	-D VERSION=1.2.3
+build_flags =
 	-D DEBUG=1
-
 [global]
 lib_deps = 
 	https://github.com/apeiris/webthing-arduino.git
+
 [env:esp32dev]
 upload_protocol = esptool
 upload_port = COM15
+;
+;debug_tool = esp-prog
+;debug_init_break = tbreak setup
+;debug_load_mode = modified
+;upload_protocol = esp-prog
+
 monitor_speed = 115200
 monitor_filters = time
 monitor_port = COM15
@@ -46,8 +51,9 @@ lib_deps =
   
 lib_ignore = WiFi101
 lib_ldf_mode = deep+
-build_flags = 
-	-D CORE_DEBUG_LEVEL=6
+build_flags =
+	-D CORE_DEBUG_LEVEL=5
 	-D DEBUG_JSON
 	-D MQERR
-
+   
+    
