string properties causes crash

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
 lib_deps = 
 	https://github.com/apeiris/webthing-arduino.git
 
+
 [env:esp32dev]
 upload_protocol = esptool
 upload_port = COM15
@@ -37,10 +38,12 @@ platform_packages =
 	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 lib_deps = 
 	${global.lib_deps}
-	https://github.com/apeiris/webthing-arduino.git
+
 	ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
 	ottowinter/ESPAsyncWebServer-esphome @ ~1.2.7
 	ottowinter/ESPAsyncWebServer-esphome @ 1.2.7
+;	https://github.com/me-no-dev/ESPAsyncWebServer.git
+;	ESP Async WebServer
 	ESP32 AnalogWrite
 	adafruit/Adafruit AHTX0 @ ^2.0.0
 	adafruit/Adafruit AHTX0 @ ~2.0.0
