full commit before vscode reinstall

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,22 +12,16 @@
 default_envs = esp32dev
 
 [common_env_data]
-build_flags =
+build_flags = 
 	-D DEBUG=1
+
 [global]
 lib_deps = 
 	https://github.com/apeiris/webthing-arduino.git
 
-
 [env:esp32dev]
 upload_protocol = esptool
 upload_port = COM5
-;
-;debug_tool = esp-prog
-;debug_init_break = tbreak setup
-;debug_load_mode = modified
-;upload_protocol = esp-prog
-
 monitor_speed = 115200
 monitor_filters = time
 monitor_port = COM5
@@ -38,25 +32,19 @@ platform_packages =
 	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 lib_deps = 
 	${global.lib_deps}
-
+	bblanchon/ArduinoJson @ 6.18.3
 	ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
 	ottowinter/ESPAsyncWebServer-esphome @ ~1.2.7
 	ottowinter/ESPAsyncWebServer-esphome @ 1.2.7
-;	https://github.com/me-no-dev/ESPAsyncWebServer.git
-;	ESP Async WebServer
 	ESP32 AnalogWrite
 	adafruit/Adafruit AHTX0 @ ^2.0.0
 	adafruit/Adafruit AHTX0 @ ~2.0.0
 	adafruit/Adafruit AHTX0 @ 2.0.0
-;	webthingsio/webthing-arduino@^0.11.7
 	knolleary/PubSubClient @ 2.8
 	bblanchon/StreamUtils@^1.5.0
-  
 lib_ignore = WiFi101
 lib_ldf_mode = deep+
-build_flags =
+build_flags = 
 	-D CORE_DEBUG_LEVEL=4
 	-D DEBUG_JSON
 	-D MQERR
-   
-    
